WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28090
Selection color of completion popups and listboxes is wrong in chromium/mac
https://bugs.webkit.org/show_bug.cgi?id=28090
Summary
Selection color of completion popups and listboxes is wrong in chromium/mac
Nico Weber
Reported
2009-08-07 17:40:59 PDT
See
http://crbug.com/15335
Attachments
Fix.
(2.31 KB, patch)
2009-08-07 17:45 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2009-08-07 17:45:33 PDT
Created
attachment 34347
[details]
Fix.
Adam Barth
Comment 2
2009-08-07 17:52:18 PDT
Comment on
attachment 34347
[details]
Fix. Clearing review flag on attachment: 34347 Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/rendering/RenderThemeChromiumMac.h M WebCore/rendering/RenderThemeChromiumMac.mm Committed
r46935
M WebCore/ChangeLog M WebCore/rendering/RenderThemeChromiumMac.mm M WebCore/rendering/RenderThemeChromiumMac.h
r46935
= 3610fdcec6ea2f7d3ccd0c4c579742f431bfe650 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/46935
Adam Barth
Comment 3
2009-08-07 17:52:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug