2009-08-07  Nicolas Weber  <thakis@chromium.org>

Reviewed by Darin Adler.

        Use correct highlight color for listboxes and completion popups.

        https://bugs.webkit.org/show_bug.cgi?id=28090

        * rendering/RenderThemeChromiumMac.h:
        * rendering/RenderThemeChromiumMac.mm:
        Rename activeListBoxSelectionBackgroundColor to
        platformActiveListBoxSelectionBackgroundColor, so that it actually
        overrides a virtual method.

Canonical link: https://commits.webkit.org/38538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46935 268f45cc-cd09-0410-ab3c-d52691b4dbfc